Added input view styling and extended webapp for 3 possible input clients

--- a/public/control.html
+++ b/public/control.html
@@ -36,6 +36,8 @@
     <button data-action="scene_high">Szene: High</button>
     <button data-action="clip_test">Clip Test (1/0)</button>
     <button data-action="stop_all">Stop All</button>
+    <button id="btnReset">Reset Projection</button>
+
 
     <div id="status">Status: nicht verbunden</div>
 
