--- a/public/input.html
+++ b/public/input.html
@@ -4,22 +4,127 @@
         <meta charset="UTF-8" />
         <title>Diktat Input</title>
     </head>
+    <link href="fonts.googleapis.com" rel="stylesheet">
+    <style>
+        body {
+        margin: 0;
+        font-family: "Space Grotesk", sans-serif;
+        background-color: #0e0f11;
+        color: #f1f2ed;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        }
+
+        .container {
+        width: 92%;
+        max-width: 900px;
+        }
+
+        /* Task-Bereich als klarer Fokus */
+        .panel {
+        text-align: center;
+        }
+
+        h1 {
+        font-weight: 700;
+        font-size: 3rem;
+        margin: 0 0 1.5rem 0;
+        }
+
+        /* Großes, sehr gut lesbares Textfeld */
+        #textInput {
+        width: 100%;
+        height: 42vh;
+        padding: 1.5rem;
+
+        font-size: 1.6rem;
+        line-height: 1.55;
+
+        background-color: #16181c;
+        color: #f1f2ed;
+
+        border: 3px solid #2a2d33;
+        border-radius: 10px;
+
+        resize: none;
+        outline: none;
+        box-sizing: border-box;
+        }
+
+        #textInput:focus {
+        border-color: #ff6a00;   /* Fokus = orange, macht Aufgabe klar */
+        }
+
+        #textInput::placeholder {
+        color: #8b9099;
+        }
+
+        /* Sehr eindeutiger, großer Button */
+        #sendBtn {
+        margin-top: 1.75rem;
+
+        width: 100%;
+        padding: 1.6rem;
+
+        font-size: 2rem;
+        font-weight: 700;
+
+        background-color: #ff6a00;
+        color: #0e0f11;
+
+        border: none;
+        border-radius: 10px;
+
+        cursor: pointer;
+        }
+
+        #sendBtn:active {
+        transform: scale(0.985);
+        }
+
+        /* Verbindungsstatus
+        .status {
+        margin-top: 1.25rem;
+        font-size: 1.1rem;
+        opacity: 0.8;
+        }
+        */
+
+    </style>
+
     <body>
-        <h1>Bitte Text eingeben</h1>
-        <textarea
-            id="textInput"
-            rows="6"
-            cols="40"
-            placeholder="Hier deinen Text eintippen..."
-        ></textarea>
-        <br/>
+        <div class="container">
 
-        <button id="sendBtn">Senden</button>
+            <main class="panel">
+                <h1>
+                    Gleich beginnt ein Diktat
+                </h1>
+                <div class="inputWrap">
+                    <div class="watermark" aria-hidden="true"></div>
+                                    
+                    <textarea
+                    id="textInput"
+                    rows="6"
+                    cols="40"
+                    placeholder="Hier deinen Text eintippen..."
+                ></textarea>
+                </div>
+                <br/>
 
-        <p>
-            Verbindung:
-            <span id="status">Verbinde...</span>
-        </p>
+                <button id="sendBtn">Senden</button>
+
+                <!-- Verbindungsstatus
+                <p>
+                    Verbindung:
+                    <span id="status">Verbinde...</span>
+                </p>
+                -->
+                
+            </main>
+        </div>
 
         <!-- Socket.io Client laden -->
         <script src="/socket.io/socket.io.js"></script>
