--- a/public/output.html
+++ b/public/output.html
@@ -3,26 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Projektion – Output</title>
+    <link href="fonts.googleapis.com" rel="stylesheet">
     <style>
       body {
         margin: 0;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          sans-serif;
-        background: #111;
-        color: #f5f5f5;
-      }
-
-      .status-bar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        padding: 6px 12px;
-        font-size: 0.8rem;
-        background: rgba(0, 0, 0, 0.6);
-        display: flex;
-        justify-content: space-between;
-        z-index: 10;
+        font-family: 'Space Grotesk', sans-serif;
+        background: #0E0F11;
+        color: #F1F2ED;
       }
 
       .projection {
@@ -39,16 +26,84 @@
         font-size: 2.5rem;
         line-height: 1.4;
       }
+
+      #projection {
+        position: relative;
+        width: 100vw;
+        height: 100vh;
+      }
+
+      .text-block {
+        position: absolute;
+        max-width: 40vw;
+        font-size: 2.2rem;
+        line-height: 1.4;
+        opacity: 0;
+        transition:
+          transform 1.2s ease,
+          opacity 0.8s ease;
+      }
+
+      /* SLOT POSITIONS FOR 3 Text Outputs*/
+
+      #center {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      #topLeft {
+        top: 10%;
+        left: 10%;
+      }
+
+      #topRight {
+        top: 10%;
+        right: 10%;
+      }
+
+      #bottomCenter {
+        bottom: 10%;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
+      /* ACTIVE STATE */
+      .text-block.active {
+        opacity: 1;
+      }
+
+
+      /* Verbindungsstatus
+      .status-bar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        padding: 6px 12px;
+        font-size: 0.8rem;
+        background: rgba(0, 0, 0, 0.6);
+        display: flex;
+        justify-content: space-between;
+        z-index: 10;
+      }
+      */
     </style>
   </head>
   <body>
+
+    <!-- Verbindungsstatus
     <div class="status-bar">
       <span id="status">Verbinde...</span>
       <span id="lastUpdate"></span>
     </div>
+    -->
 
-    <div class="projection">
-      <p id="projectionText">Warte auf eingegebenen Text…</p>
+    <div id="projection">
+      <div class="text-block" id="center"></div>
+      <div class="text-block" id="topLeft"></div>
+      <div class="text-block" id="topRight"></div>
+      <div class="text-block" id="bottomCenter"></div>
     </div>
 
     <!-- Socket.io Client -->
