--- a/public/input.html
+++ b/public/input.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Diktat Input</title>
     </head>
-    <link href="fonts.googleapis.com" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Space Grotesk' rel='stylesheet'>
     <style>
         body {
         margin: 0;
@@ -41,6 +41,7 @@
         padding: 1.5rem;
 
         font-size: 1.6rem;
+        font-weight: 400;
         line-height: 1.55;
 
         background-color: #16181c;
